--- a/index.cshtml
+++ b/index.cshtml
@@ -129,11 +129,11 @@ user profile - www.main.com/user
 <div class="container">
 <div class="row">
 <div class="col-lg-12">
-<h2>Complete a questionaire and recieve 25% off any quoted services!</h2>
-<p>By filling out and completing one of my provided questionaire survey form.</p>
-<p>You're eligible to recieve a 25% off discount towards any quote.</p>
-<a class="btn btn-lg btn-primary" href="/shop/analog-course">Take It Now</a><br>
-<!--or <a href="/features">Learn More</a>-->
+<h2>Find me on GitHub!</h2>
+<p>Follow along with this website by checking out my GitHub repository</p>
+<p>Feel free to fork and make pull request. I intend to use this website as a demo and learning experience.</p>
+<a class="btn btn-lg btn-primary" href="https://github.com/herbertmilhomme/HerbertMilhomme">See my code!</a><br>
+or <a href="https://github.com/herbertmilhomme">GitHub profile</a>
 </div>
 </div>
 <!-- /.row -->
