--- a/Layouts/Forum/topics_page.cshtml
+++ b/Layouts/Forum/topics_page.cshtml
@@ -79,7 +79,7 @@
                 <a href="~/Account/Login" title=""><img alt="New Topic" src="~/_assets/images/forum/Forum_NewTopic.png" /></a>}
 		</li>
 	</ul>
-	<table id="datatable" class="table table-striped table-bordered topic-list" cellspacing="0" cellpadding="0">
+	<table id="datatable" class="datatable table table-striped table-bordered topic-list" cellspacing="0" cellpadding="0">
 		<thead>
 			<tr class="header">
 				<th class="name">Topic Name</th>
